# my_web_app

./: .gitignore  CMakeLists.txt  build_project.sh  run_program.sh  upload.sh
cmake/: toolchain.cmake
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt  net.c  net.h
src/mongoose/: CMakeLists.txt
web_root/: main.js
